# tyl-task-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.test  README.md  TEMPLATE.md  docker-compose.yml
.github/workflows/: ci.yml  docker-release.yml  release.yml
config/: development.toml  production.toml  test.toml
docker/: Dockerfile  docker-compose.yml  init.sql
examples/: basic_usage.rs  event_driven_usage.rs
scripts/: create-microservice.sh  test.sh  validate-docker.sh
src/: config.rs  domain.rs  lib.rs  main.rs  routes.rs  validation.rs
src/adapters/: database.rs  graph_repository.rs  http_client.rs  mod.rs
src/domain/: computed_properties.rs  models.rs  queries.rs  services.rs
src/events/: examples.rs  handlers.rs  mod.rs  service.rs  task_events.rs
src/handlers/: api.rs  health.rs  mod.rs  tasks.rs
src/routes/: task_routes.rs
tests/: api_tests.rs  integration_tests.rs
