[package]
name = "tyl-task-service"
version = "0.1.0"
edition = "2021"
authors = ["TYL Framework Team"]
license = "AGPL-3.0"
repository = "https://github.com/the-yaml-life/tyl-task-service"
description = "Task management microservice built with TYL framework"
homepage = "https://github.com/the-yaml-life/tyl-task-service"
documentation = "https://docs.rs/tyl-task-service"
readme = "README.md"
keywords = ["task-management", "microservice", "hexagonal-architecture", "rust", "tyl-framework"]
categories = ["web-programming", "development-tools", "rust-patterns"]

[dependencies]
# TYL Framework dependencies
tyl-errors = { git = "https://github.com/the-yaml-life/tyl-errors.git", branch = "main" }
tyl-config = { git = "https://github.com/the-yaml-life/tyl-config.git", branch = "main" }
tyl-logging = { git = "https://github.com/the-yaml-life/tyl-logging.git", branch = "main" }
tyl-tracing = { git = "https://github.com/the-yaml-life/tyl-tracing.git", branch = "main" }
tyl-pubsub-port = { git = "https://github.com/the-yaml-life/tyl-pubsub-port.git", branch = "main" }
tyl-graph-port = { git = "https://github.com/the-yaml-life/tyl-graph-port.git", branch = "main" }
tyl-falkordb-adapter = { git = "https://github.com/the-yaml-life/tyl-falkordb-adapter.git", branch = "main" }

# Core microservice dependencies
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# HTTP client for external services
reqwest = { version = "0.11", features = ["json"] }

# Add microservice-specific dependencies here

[dev-dependencies]
# Development dependencies for testing
tokio-test = "0.4"
axum-test = "14.0"